# Hough_Transform

./: .coverage  .flake8  README.md  main.py  mypy.ini  noxfile.py  pyproject.toml  requirements.txt
docs/: conf.py
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
docs/_build/_sources/: index.rst.txt  license.rst.txt  reference.rst.txt
src/: __init__.py
src/hough_transform_project/: ImageProcessor.py  console.py
tests/: __init__.py  conftest.py  test_console.py
